--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">4,508</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">6,181</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">webdriver.Topic_01_CheckEnvironment</td><td><a href="#m0">TC_01_Url</a></td><td rowspan="1">1716294195955</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m1">TC_02_Logo</a></td><td rowspan="1">1716294195967</td><td rowspan="1">58</td></tr><tr class="passedeven"><td><a href="#m2">TC_03_Form</a></td><td rowspan="1">1716294196025</td><td rowspan="1">54</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">webdriver.TC07_DemoAxes</td><td><a href="#m0">TC_07_DemoAxes</a></td><td rowspan="1">1741419925533</td><td rowspan="1">50</td></tr><tr class="passedeven"><td><a href="#m1">TC_07_DemoAxes2</a></td><td rowspan="1">1741419925583</td><td rowspan="1">18</td></tr><tr class="passedeven"><td><a href="#m2">TC_07_DemoAxes3</a></td><td rowspan="1">1741419925601</td><td rowspan="1">22</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">webdriver.Topic_01_CheckEnvironment#TC_01_Url</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">webdriver.Topic_01_CheckEnvironment#TC_02_Logo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">webdriver.Topic_01_CheckEnvironment#TC_03_Form</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">webdriver.TC07_DemoAxes#TC_07_DemoAxes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">webdriver.TC07_DemoAxes#TC_07_DemoAxes2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">webdriver.TC07_DemoAxes#TC_07_DemoAxes3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
