--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse--1064053698\testng-customsuite.xml</span>
+                    <span>C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse-1628648738\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,17 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_01_CheckEnvironment" class="method navigator-link" hash-for-method="TC_01_Url">TC_01_Url</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="webdriver.TC07_DemoAxes" class="method navigator-link" hash-for-method="TC_07_DemoAxes">TC_07_DemoAxes</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_01_CheckEnvironment" class="method navigator-link" hash-for-method="TC_02_Logo">TC_02_Logo</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="webdriver.TC07_DemoAxes" class="method navigator-link" hash-for-method="TC_07_DemoAxes2">TC_07_DemoAxes2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_01_CheckEnvironment" class="method navigator-link" hash-for-method="TC_03_Form">TC_03_Form</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="webdriver.TC07_DemoAxes" class="method navigator-link" hash-for-method="TC_07_DemoAxes3">TC_07_DemoAxes3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +130,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">webdriver.Topic_01_CheckEnvironment</span>
+              <span class="class-name">webdriver.TC07_DemoAxes</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Url">
-                  </a> <!-- TC_01_Url -->
-                  <span class="method-name">TC_01_Url</span>
+                  <a name="TC_07_DemoAxes">
+                  </a> <!-- TC_07_DemoAxes -->
+                  <span class="method-name">TC_07_DemoAxes</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_02_Logo">
-                  </a> <!-- TC_02_Logo -->
-                  <span class="method-name">TC_02_Logo</span>
+                  <a name="TC_07_DemoAxes2">
+                  </a> <!-- TC_07_DemoAxes2 -->
+                  <span class="method-name">TC_07_DemoAxes2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_03_Form">
-                  </a> <!-- TC_03_Form -->
-                  <span class="method-name">TC_03_Form</span>
+                  <a name="TC_07_DemoAxes3">
+                  </a> <!-- TC_07_DemoAxes3 -->
+                  <span class="method-name">TC_07_DemoAxes3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse--1064053698\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse-1628648738\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +168,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;webdriver.Topic_01_CheckEnvironment&quot;/&gt;
+      &lt;class name=&quot;webdriver.TC07_DemoAxes&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,22 +210,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_02_Logo')
-data.setCell(0, 2, 'webdriver.Topic_01_CheckEnvironment')
-data.setCell(0, 3, 58);
+data.setCell(0, 1, 'TC_07_DemoAxes')
+data.setCell(0, 2, 'webdriver.TC07_DemoAxes')
+data.setCell(0, 3, 50);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_03_Form')
-data.setCell(1, 2, 'webdriver.Topic_01_CheckEnvironment')
-data.setCell(1, 3, 54);
+data.setCell(1, 1, 'TC_07_DemoAxes3')
+data.setCell(1, 2, 'webdriver.TC07_DemoAxes')
+data.setCell(1, 3, 22);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_01_Url')
-data.setCell(2, 2, 'webdriver.Topic_01_CheckEnvironment')
-data.setCell(2, 3, 11);
+data.setCell(2, 1, 'TC_07_DemoAxes2')
+data.setCell(2, 2, 'webdriver.TC07_DemoAxes')
+data.setCell(2, 3, 18);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 123 ms</span>
+              <span class="suite-total-time">Total running time: 90 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,26 +251,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">webdriver.Topic_01_CheckEnvironment</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">webdriver.TC07_DemoAxes</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_01_Url</span>
-                <span class="method-start">3518 ms</span>
+                <span class="method-name">TC_07_DemoAxes</span>
+                <span class="method-start">5360 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">TC_02_Logo</span>
-                <span class="method-start">3530 ms</span>
+                <span class="method-name">TC_07_DemoAxes2</span>
+                <span class="method-start">5410 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">TC_03_Form</span>
-                <span class="method-start">3588 ms</span>
+                <span class="method-name">TC_07_DemoAxes3</span>
+                <span class="method-start">5428 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">3643 ms</span>
+                <span class="method-start">5450 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
