--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,22 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>webdriver.Topic_01_CheckEnvironment</td>
+<td>webdriver.TC07_DemoAxes</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_03_Form</td>
+<td>TC_07_DemoAxes</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_02_Logo</td>
+<td>TC_07_DemoAxes3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_01_Url</td>
+<td>TC_07_DemoAxes2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
