--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9aafa1">  <td>24/05/21 19:23:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Topic_01_CheckEnvironment.beforeClass()[pri:0, instance:webdriver.Topic_01_CheckEnvironment@543295b0]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="e76cc7">  <td>25/03/08 14:45:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC07_DemoAxes.beforeClass()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="9aafa1">  <td>24/05/21 19:23:15</td>   <td>3515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_01_CheckEnvironment.TC_01_Url()[pri:0, instance:webdriver.Topic_01_CheckEnvironment@543295b0]">TC_01_Url</td> 
+<tr bgcolor="e76cc7">  <td>25/03/08 14:45:25</td>   <td>5358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC07_DemoAxes.TC_07_DemoAxes()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">TC_07_DemoAxes</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="9aafa1">  <td>24/05/21 19:23:15</td>   <td>3527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_01_CheckEnvironment.TC_02_Logo()[pri:0, instance:webdriver.Topic_01_CheckEnvironment@543295b0]">TC_02_Logo</td> 
+<tr bgcolor="e76cc7">  <td>25/03/08 14:45:25</td>   <td>5408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC07_DemoAxes.TC_07_DemoAxes2()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">TC_07_DemoAxes2</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="9aafa1">  <td>24/05/21 19:23:16</td>   <td>3585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_01_CheckEnvironment.TC_03_Form()[pri:0, instance:webdriver.Topic_01_CheckEnvironment@543295b0]">TC_03_Form</td> 
+<tr bgcolor="e76cc7">  <td>25/03/08 14:45:25</td>   <td>5426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC07_DemoAxes.TC_07_DemoAxes3()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">TC_07_DemoAxes3</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="9aafa1">  <td>24/05/21 19:23:16</td>   <td>3640</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Topic_01_CheckEnvironment.afterClass()[pri:0, instance:webdriver.Topic_01_CheckEnvironment@543295b0]">&lt;&lt;afterClass</td> 
+<tr bgcolor="e76cc7">  <td>25/03/08 14:45:25</td>   <td>5448</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC07_DemoAxes.afterClass()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
