--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e76cc7">  <td>25/03/08 14:45:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC07_DemoAxes.beforeClass()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/03/08 14:45:25</td>   <td>5358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC07_DemoAxes.TC_07_DemoAxes()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">TC_07_DemoAxes</td> 
+<tr bgcolor="e76cc7">  <td>25/04/15 19:33:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_05_WebBrowserExercise.beforeClass()[pri:0, instance:webdriver.Topic_05_WebBrowserExercise@793f29ff]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="e76cc7">  <td>25/04/15 19:33:41</td>   <td>2010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_05_WebBrowserExercise.TC_01_Url()[pri:0, instance:webdriver.Topic_05_WebBrowserExercise@793f29ff]">TC_01_Url</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/03/08 14:45:25</td>   <td>5408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC07_DemoAxes.TC_07_DemoAxes2()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">TC_07_DemoAxes2</td> 
-  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/03/08 14:45:25</td>   <td>5426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC07_DemoAxes.TC_07_DemoAxes3()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">TC_07_DemoAxes3</td> 
-  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/03/08 14:45:25</td>   <td>5448</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC07_DemoAxes.afterClass()[pri:0, instance:webdriver.TC07_DemoAxes@3e8c3cb]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="e76cc7">  <td>25/04/15 19:33:51</td>   <td>11932</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_05_WebBrowserExercise.afterClass()[pri:0, instance:webdriver.Topic_05_WebBrowserExercise@793f29ff]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
