--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e76cc7">  <td>25/04/15 19:33:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_05_WebBrowserExercise.beforeClass()[pri:0, instance:webdriver.Topic_05_WebBrowserExercise@793f29ff]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="9aafa1">  <td>25/04/19 16:49:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_06_WebElementExercise.beforeClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@4b013c76]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/04/15 19:33:41</td>   <td>2010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_05_WebBrowserExercise.TC_01_Url()[pri:0, instance:webdriver.Topic_05_WebBrowserExercise@793f29ff]">TC_01_Url</td> 
+<tr bgcolor="9aafa1">  <td>25/04/19 16:49:30</td>   <td>2106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_01_()[pri:0, instance:webdriver.Topic_06_WebElementExercise@4b013c76]">TC_01_</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/04/15 19:33:51</td>   <td>11932</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_05_WebBrowserExercise.afterClass()[pri:0, instance:webdriver.Topic_05_WebBrowserExercise@793f29ff]">&lt;&lt;afterClass</td> 
+<tr bgcolor="9aafa1">  <td>25/04/19 16:50:01</td>   <td>33796</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_06_WebElementExercise.afterClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@4b013c76]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
