--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse-489131371\testng-customsuite.xml</span>
+                    <span>C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse--764533991\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -113,6 +113,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_06_WebElementExercise" class="method navigator-link" hash-for-method="TC_03_Selected">TC_03_Selected</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_06_WebElementExercise" class="method navigator-link" hash-for-method="TC_04_MailChimp">TC_04_MailChimp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -154,12 +159,19 @@
                   <span class="method-name">TC_03_Selected</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_04_MailChimp">
+                  </a> <!-- TC_04_MailChimp -->
+                  <span class="method-name">TC_04_MailChimp</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse-489131371\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse--764533991\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,24 +220,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_01_Displayed')
+data.setCell(0, 1, 'TC_04_MailChimp')
 data.setCell(0, 2, 'webdriver.Topic_06_WebElementExercise')
-data.setCell(0, 3, 3651);
+data.setCell(0, 3, 32844);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'TC_03_Selected')
 data.setCell(1, 2, 'webdriver.Topic_06_WebElementExercise')
-data.setCell(1, 3, 3639);
+data.setCell(1, 3, 3644);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_02_Enabled')
+data.setCell(2, 1, 'TC_01_Displayed')
 data.setCell(2, 2, 'webdriver.Topic_06_WebElementExercise')
-data.setCell(2, 3, 122);
+data.setCell(2, 3, 1761);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'TC_02_Enabled')
+data.setCell(3, 2, 'webdriver.Topic_06_WebElementExercise')
+data.setCell(3, 3, 115);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 38 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -258,19 +274,23 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">TC_01_Displayed</span>
-                <span class="method-start">1775 ms</span>
+                <span class="method-start">1679 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TC_02_Enabled</span>
-                <span class="method-start">5426 ms</span>
+                <span class="method-start">3442 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TC_03_Selected</span>
-                <span class="method-start">5548 ms</span>
+                <span class="method-start">3559 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_04_MailChimp</span>
+                <span class="method-start">7203 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">9187 ms</span>
+                <span class="method-start">40049 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
