--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75b7e8">  <td>25/05/17 15:22:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_01_Displayed()[pri:0, instance:webdriver.Topic_06_WebElementExercise@19e4653c]">TC_01_Displayed</td> 
+<tr bgcolor="9aafa1">  <td>25/05/31 16:05:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_01_Displayed()[pri:0, instance:webdriver.Topic_06_WebElementExercise@7bba5817]">TC_01_Displayed</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="75b7e8">  <td>25/05/17 15:22:06</td>   <td>3651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_02_Enabled()[pri:0, instance:webdriver.Topic_06_WebElementExercise@19e4653c]">TC_02_Enabled</td> 
+<tr bgcolor="9aafa1">  <td>25/05/31 16:05:43</td>   <td>1763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_02_Enabled()[pri:0, instance:webdriver.Topic_06_WebElementExercise@7bba5817]">TC_02_Enabled</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="75b7e8">  <td>25/05/17 15:22:06</td>   <td>3773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_03_Selected()[pri:0, instance:webdriver.Topic_06_WebElementExercise@19e4653c]">TC_03_Selected</td> 
+<tr bgcolor="9aafa1">  <td>25/05/31 16:05:43</td>   <td>1880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_03_Selected()[pri:0, instance:webdriver.Topic_06_WebElementExercise@7bba5817]">TC_03_Selected</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="75b7e8">  <td>25/05/17 15:22:09</td>   <td>7412</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_06_WebElementExercise.afterClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@19e4653c]">&lt;&lt;afterClass</td> 
+<tr bgcolor="9aafa1">  <td>25/05/31 16:05:46</td>   <td>5524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_04_MailChimp()[pri:0, instance:webdriver.Topic_06_WebElementExercise@7bba5817]">TC_04_MailChimp</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9aafa1">  <td>25/05/31 16:06:19</td>   <td>38370</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_06_WebElementExercise.afterClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@7bba5817]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="75b7e8">  <td>25/05/17 15:22:00</td>   <td>-1773</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_06_WebElementExercise.beforeClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@19e4653c]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="9aafa1">  <td>25/05/31 16:05:39</td>   <td>-1677</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_06_WebElementExercise.beforeClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@7bba5817]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
