--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">22,405</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">17,851</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">webdriver.Topic_06_WebElementExercise</td><td><a href="#m0">TC_01_Displayed</a></td><td rowspan="1">1748682526920</td><td rowspan="1">1246</td></tr><tr class="passedeven"><td><a href="#m1">TC_02_Enabled</a></td><td rowspan="1">1748682528167</td><td rowspan="1">139</td></tr><tr class="passedeven"><td><a href="#m2">TC_03_Selected</a></td><td rowspan="1">1748682528307</td><td rowspan="1">3665</td></tr><tr class="passedeven"><td><a href="#m3">TC_04_MailChimp</a></td><td rowspan="1">1748682531972</td><td rowspan="1">14923</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">webdriver.Topic_06_WebElementExercise</td><td><a href="#m0">TC_05_MailChimp_SendUpperKeys</a></td><td rowspan="1">1749288327839</td><td rowspan="1">14878</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">webdriver.Topic_06_WebElementExercise#TC_01_Displayed</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">webdriver.Topic_06_WebElementExercise#TC_02_Enabled</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">webdriver.Topic_06_WebElementExercise#TC_03_Selected</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">webdriver.Topic_06_WebElementExercise#TC_04_MailChimp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">webdriver.Topic_06_WebElementExercise#TC_05_MailChimp_SendUpperKeys</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
