--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>webdriver.Topic_06_WebElementExercise.TC_03_Selected</td></tr>
+<tr><td>webdriver.Topic_06_WebElementExercise.TC_02_Enabled</td></tr>
+<tr><td>webdriver.Topic_06_WebElementExercise.TC_01_Displayed</td></tr>
+<tr><td>webdriver.Topic_06_WebElementExercise.TC_04_MailChimp</td></tr>
 </table>
