--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e76cc7">  <td>25/05/31 16:08:45</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_06_WebElementExercise.beforeClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@33065d67]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="bff5b7">  <td>25/06/07 16:25:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_06_WebElementExercise.beforeClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@196a42c3]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/05/31 16:08:46</td>   <td>1710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_01_Displayed()[pri:0, instance:webdriver.Topic_06_WebElementExercise@33065d67]">TC_01_Displayed</td> 
+<tr bgcolor="bff5b7">  <td>25/06/07 16:25:27</td>   <td>1952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_05_MailChimp_SendUpperKeys()[pri:0, instance:webdriver.Topic_06_WebElementExercise@196a42c3]">TC_05_MailChimp_SendUpperKeys</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/05/31 16:08:48</td>   <td>2957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_02_Enabled()[pri:0, instance:webdriver.Topic_06_WebElementExercise@33065d67]">TC_02_Enabled</td> 
-  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/05/31 16:08:48</td>   <td>3097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_03_Selected()[pri:0, instance:webdriver.Topic_06_WebElementExercise@33065d67]">TC_03_Selected</td> 
-  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/05/31 16:08:51</td>   <td>6762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_04_MailChimp()[pri:0, instance:webdriver.Topic_06_WebElementExercise@33065d67]">TC_04_MailChimp</td> 
-  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="e76cc7">  <td>25/05/31 16:09:06</td>   <td>21686</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_06_WebElementExercise.afterClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@33065d67]">&lt;&lt;afterClass</td> 
+<tr bgcolor="bff5b7">  <td>25/06/07 16:25:42</td>   <td>16833</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_06_WebElementExercise.afterClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@196a42c3]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
