--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -2,5 +2,6 @@
 <tr><td>webdriver.Topic_06_WebElementExercise.TC_03_Selected</td></tr>
 <tr><td>webdriver.Topic_06_WebElementExercise.TC_02_Enabled</td></tr>
 <tr><td>webdriver.Topic_06_WebElementExercise.TC_01_Displayed</td></tr>
-<tr><td>webdriver.Topic_06_WebElementExercise.TC_04_MailChimp</td></tr>
+<tr><td>webdriver.Topic_06_WebElementExercise.TC_04_MailChimp_AssertPartialTrue</td></tr>
+<tr><td>webdriver.Topic_06_WebElementExercise.TC_05_MailChimp_SendUpperKey</td></tr>
 </table>
