--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse-1999760544\testng-customsuite.xml</span>
+                    <span>C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse--256951052\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_06_WebElementExercise" class="method navigator-link" hash-for-method="TC_05_MailChimp_SendUpperKeys">TC_05_MailChimp_SendUpperKeys</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_06_WebElementExercise" class="method navigator-link" hash-for-method="TC_06_MailChimp_AssertAllTrue">TC_06_MailChimp_AssertAllTrue</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_05_MailChimp_SendUpperKeys">
-                  </a> <!-- TC_05_MailChimp_SendUpperKeys -->
-                  <span class="method-name">TC_05_MailChimp_SendUpperKeys</span>
+                  <a name="TC_06_MailChimp_AssertAllTrue">
+                  </a> <!-- TC_06_MailChimp_AssertAllTrue -->
+                  <span class="method-name">TC_06_MailChimp_AssertAllTrue</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse-1999760544\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse--256951052\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;webdriver.Topic_06_WebElementExercise&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_05_MailChimp_SendUpperKeys&quot;/&gt;
+          &lt;include name=&quot;TC_06_MailChimp_AssertAllTrue&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- webdriver.Topic_06_WebElementExercise --&gt;
     &lt;/classes&gt;
@@ -190,9 +190,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_05_MailChimp_SendUpperKeys')
+data.setCell(0, 1, 'TC_06_MailChimp_AssertAllTrue')
 data.setCell(0, 2, 'webdriver.Topic_06_WebElementExercise')
-data.setCell(0, 3, 14878);
+data.setCell(0, 3, 14349);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -212,7 +212,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -224,7 +224,9 @@ return data;
                 <br/>
                 <span class="ignored-method-name">TC_01_Displayed</span>
                 <br/>
-                <span class="ignored-method-name">TC_04_MailChimp</span>
+                <span class="ignored-method-name">TC_04_MailChimp_AssertPartialTrue</span>
+                <br/>
+                <span class="ignored-method-name">TC_05_MailChimp_SendUpperKey</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -242,12 +244,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">TC_05_MailChimp_SendUpperKeys</span>
-                <span class="method-start">1955 ms</span>
+                <span class="method-name">TC_06_MailChimp_AssertAllTrue</span>
+                <span class="method-start">1854 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">16836 ms</span>
+                <span class="method-start">16205 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
