Optimize TC_02_LoginWithInvalidEmailAndInvalidPassword

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>webdriver.Topic_07_WebLoginExercise.TC_01_LoginWithEmptyEmailAndPassword</td></tr>
 </table>
