--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse--45007291\testng-customsuite.xml</span>
+                    <span>C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse-643347950\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_07_WebLoginExercise" class="method navigator-link" hash-for-method="TC_01_LoginWithEmptyEmailAndPassword">TC_01_LoginWithEmptyEmailAndPassword</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_07_WebLoginExercise" class="method navigator-link" hash-for-method="TC_02_LoginWithInvalidEmail">TC_02_LoginWithInvalidEmail</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_LoginWithEmptyEmailAndPassword">
-                  </a> <!-- TC_01_LoginWithEmptyEmailAndPassword -->
-                  <span class="method-name">TC_01_LoginWithEmptyEmailAndPassword</span>
+                  <a name="TC_02_LoginWithInvalidEmail">
+                  </a> <!-- TC_02_LoginWithInvalidEmail -->
+                  <span class="method-name">TC_02_LoginWithInvalidEmail</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse--45007291\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mickeypoc\AppData\Local\Temp\testng-eclipse-643347950\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;webdriver.Topic_07_WebLoginExercise&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_01_LoginWithEmptyEmailAndPassword&quot;/&gt;
+          &lt;include name=&quot;TC_02_LoginWithInvalidEmail&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- webdriver.Topic_07_WebLoginExercise --&gt;
     &lt;/classes&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_01_LoginWithEmptyEmailAndPassword')
+data.setCell(0, 1, 'TC_02_LoginWithInvalidEmail')
 data.setCell(0, 2, 'webdriver.Topic_07_WebLoginExercise')
-data.setCell(0, 3, 12735);
+data.setCell(0, 3, 9673);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,9 +212,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">webdriver.Topic_07_WebLoginExercise</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">TC_01_LoginWithEmptyEmailAndPassword</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -229,12 +236,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">TC_01_LoginWithEmptyEmailAndPassword</span>
-                <span class="method-start">2184 ms</span>
+                <span class="method-name">TC_02_LoginWithInvalidEmail</span>
+                <span class="method-start">2123 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">14921 ms</span>
+                <span class="method-start">11798 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
