--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>webdriver.Topic_07_WebLoginExercise.TC_02_LoginWithWrongEmailFormat</td></tr>
 <tr><td>webdriver.Topic_07_WebLoginExercise.TC_01_LoginWithEmptyEmailAndPassword</td></tr>
+<tr><td>webdriver.Topic_07_WebLoginExercise.TC_03_LoginWithPasswordLessThan6Chars</td></tr>
+<tr><td>webdriver.Topic_07_WebLoginExercise.TC_04_LoginWithIncorrectEmail</td></tr>
 </table>
