--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bb09c">  <td>25/06/28 14:44:38</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_07_WebLoginExercise.beforeClass()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@76b1e9b8]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="9da26d">  <td>25/07/05 15:53:36</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_07_WebLoginExercise.beforeClass()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@248e319b]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="8bb09c">  <td>25/06/28 14:44:40</td>   <td>2121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_07_WebLoginExercise.TC_02_LoginWithInvalidEmail()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@76b1e9b8]">TC_02_LoginWithInvalidEmail</td> 
+<tr bgcolor="9da26d">  <td>25/07/05 15:53:38</td>   <td>2337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_07_WebLoginExercise.TC_05_CreateNewAccount()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@248e319b]">TC_05_CreateNewAccount</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="8bb09c">  <td>25/06/28 14:44:50</td>   <td>11796</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_07_WebLoginExercise.afterClass()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@76b1e9b8]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
