Update test case CreateNewAccount and implement test case LoginWithValidAccount

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -3,4 +3,5 @@
 <tr><td>webdriver.Topic_07_WebLoginExercise.TC_01_LoginWithEmptyEmailAndPassword</td></tr>
 <tr><td>webdriver.Topic_07_WebLoginExercise.TC_03_LoginWithPasswordLessThan6Chars</td></tr>
 <tr><td>webdriver.Topic_07_WebLoginExercise.TC_04_LoginWithIncorrectEmail</td></tr>
+<tr><td>webdriver.Topic_07_WebLoginExercise.TC_05_CreateNewAccount</td></tr>
 </table>
