--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9da26d">  <td>25/07/05 15:53:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_07_WebLoginExercise.TC_05_CreateNewAccount()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@248e319b]">TC_05_CreateNewAccount</td> 
+<tr bgcolor="d2d9cb">  <td>25/07/20 15:32:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_07_WebLoginExercise.TC_06_LoginWithValidAccount()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@3e27ba32]">TC_06_LoginWithValidAccount</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="9da26d">  <td>25/07/05 15:53:36</td>   <td>-2337</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_07_WebLoginExercise.beforeClass()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@248e319b]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="d2d9cb">  <td>25/07/20 15:32:28</td>   <td>13183</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_07_WebLoginExercise.afterClass()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@3e27ba32]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="d2d9cb">  <td>25/07/20 15:32:13</td>   <td>-1724</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_07_WebLoginExercise.beforeClass()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@3e27ba32]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
