Update TC07 and Create TC08

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -30,6 +30,10 @@
 <td>TC_01_LoginWithEmptyEmailAndPassword</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>TC_06_LoginWithValidAccount</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
